# CircuitSimulator

./: .gitignore  CMakeLists.txt  Capacitor.cpp  Circuit.cpp  Complex.cpp  Current.cpp  CurrentSource.cpp  Documentation.docx  Element.cpp  Inductor.cpp  Interface.cpp  README.md  Resistor.cpp  Source.cpp  Voltage.cpp  VoltageSource.cpp  main.cpp  ~$cumentation.docx
include/CircuitSimulator/: Capacitor.h  Circuit.h  Complex.h  Current.h  CurrentSource.h  Element.h  Inductor.h  Interface.h  Resistor.h  Source.h  Voltage.h  VoltageSource.h
src/: CMakeLists.txt  Capacitor.cpp  Circuit.cpp  Inductor.cpp  Resistor.cpp
src/include/CircuitSimulator/: Capacitor.h  Current.h  Interface.h  Resistor.h
src/tests/: CircuitTests.cpp
tests/: CircuitTests.cpp  CircuitTests.h
